network/igw.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.tf.id
  tags = {
    "Name" = "${var.name}_gw"
  }
}
